[Ankit | Praveen] Fix. alignment of video description.

--- a/src/components/videoPlayer/styles/VideoPlayerStyles.module.css
+++ b/src/components/videoPlayer/styles/VideoPlayerStyles.module.css
@@ -21,11 +21,11 @@
 .ytPlayer {
     width: 100%;
     height: 550px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .videoTitle {
-    margin: 25px 0px;
+    margin: 5px 0px;
     color: black;
 }
 
